<resources>
    <string name="app_name">Tempus</string>
    <string name="fragment_booking_title">Quickrecord</string>
    <string name="fragment_booking_list_title">Time Manager</string>
    <string name="save">Speichern</string>
    <string name="ReportText">Auswertung</string>
    <string name="search">Suchen</string>
    <string name="cancel">Abbrechen</string>
    <string name="project_subheading">Projekt</string>
    <string name="start_datetime_subheading">Start</string>
    <string name="ReportStartDate">Startdatum</string>
    <string name="end_datetime_subheading">Ende</string>
    <string name="activity_booking_edit">Buchung bearbeiten</string>
    <string name="activity_booking_new">Neue Buchung</string>
    <string name="delete">Löschen</string>
    <string name="sync">Synchronisieren</string>



    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_sync">Synchronisieren</string>
    <string name="nav_logout">Logout</string>

    <!-- Quickrecord labels -->
    <string name="recording_start">START</string>
    <string name="recording_start_hint">Wähle ein Projekt und drücke START</string>
    <string name="recording_stop_hint">Drücke STOP wenn du fertig bist!</string>
    <string name="recording_stop">STOP</string>
    <string name="recording_started">Die Aufzeichnung der Buchung %s hat begonnen!</string>
    <string name="recording_stopped">Die Buchung %s wurde gespeichert!</string>

</resources>
