<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <!-- our toolbar -->
    <include layout="@layout/tool_bar" />

    <TextView
        style="@style/SubsectionHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/project_subheading" />

    <Spinner
        android:id="@+id/cbProject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@android:layout/simple_list_item_1"/>


    <TextView
        style="@style/SubsectionHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_datetime_subheading" />


    <Button
        android:id="@+id/btnDateStart"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Startdatum" />

    <Button
        android:id="@+id/btnTimeStart"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Startuhrzeit" />

    <TextView
        style="@style/SubsectionHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_datetime_subheading" />


    <Button
        android:id="@+id/btnDateEnd"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Startdatum" />

    <Button
        android:id="@+id/btnTimeEnd"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Startuhrzeit" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="@style/Widget.AppCompat.ButtonBar">

        <Button
            android:id="@+id/btnOk"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"
            style="@style/Base.Widget.AppCompat.Button"/>

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            style="@style/Base.Widget.AppCompat.Button"/>
    </LinearLayout>


</LinearLayout>